src/objects/inscor__Part_360_Metric_Data__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Part 360 Metric Datas</relationshipLabel>
        <relationshipName>Part_360_Metric_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Part 360 Metric Datas</relationshipLabel>
        <relationshipName>Part_360_Metric_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quote_Avg_12_Month_Price__c</fullName>
        <label>Quote-Avg 12 Month Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Part 360 Metric Data</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Part_Number__c</columns>
        <columns>inscor__Quote_Avg_12_Month_Price__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>inscor__Company__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PMD-{0}</displayFormat>
        <label>Part 360 Metric Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part 360 Metric Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>